package baseline;

public class Products  {
    public String name;
    public float price;
    public int quantity;

    public Products(){

    }

    public Products(String name, float price, int quantity) {
        this.name = name;
        this.price = price;
        this.quantity = quantity;
    }

}
