@startuml
'https://plantuml.com/class-diagram
class Main{
    +String name
    +int price
    +int quantity

    +main()
}

class ReadFile{
    Products product
    +read()
}

class SearchFile{
    -String name
    +search()
}

class Products{
private String name
private float price
private int quantity
}

Main --o ReadFile
Main --o SearchFile
ReadFile --o Products
@enduml